Update to portfolios
Added missing student portfolio link.

--- a/portfolios/index.html
+++ b/portfolios/index.html
@@ -273,6 +273,18 @@
                         </a>
                     </li>
                     <li>
+                        <a href="../sesserh">
+                            <div class="card">
+                                <div class="card-front">
+                                    <p>sesserh</p>
+                                </div>
+                                <div class="card-back">
+                                    <p>sesserh</p>
+                                </div>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
                         <a href="../whitmorej">
                             <div class="card">
                                 <div class="card-front">
