--- a/furuci/index.html
+++ b/furuci/index.html
@@ -38,7 +38,7 @@
                     
                     <li> Blanchard, B. S., & Blyler, J. E. (2016). <em> System engineering management.</em> John Wiley & Sons, Incorporated. <a href="ProQuest Ebook Central - Reader">Link to Textbook.</a></li>
                     <li> Kossiakoff, A., Seymour, S. J., Flanigan, D. A., & Biemer, S. M. (2020). <em> Systems engineering : 
-                    Principles and practice (Third edition.) </em> John Wiley & Sons, Inc. <a href= "Systems Engineering Principles and Practice"> Textbook Link Number Two </a> 
+                    Principles and practice (Third edition.) </em> John Wiley & Sons, Inc. <a href= "Systems Engineering Principles and Practice"> Textbook Link Number Two </a></li>
                     <li> Holt, J., & Weilkiens, T. (2023). <em> Systems Engineering Demystified. Packt Publishing Ltd.</em></li>
                </ol>
 
