--- a/cruze/index.html
+++ b/cruze/index.html
@@ -41,7 +41,29 @@
          </article>
 
          <!-- Module 1.2 Blog Post Starts here -->
-
+         <article>
+            <header class="Understanding the Lifecycle of Systems Engineering">
+               <h2>Module 1.2 Blog Post</h2>
+            </header>
+            <h3>Understanding the Lifecycle of Systems Engineering</h3>
+            <p>Try to imagine a group of developers creating a new storefront through an app, they are eager to put their ideas into effect and get straight to building their app without a clear plan in mind. The app looks to be successful at first, but over time, its flaws begin to show themselves. Bugs begin to surface; new updates are necessary to keep up with recent tech. Without any clear guide toward its development, it becomes obsolete. This has likely been the case some developers have faced as they ignore a system’s life cycle. A system life cycle isn’t just about planning, it also involves making sure a digital system, can continue to grow or evolve, adapt, and continue to prosper! The life cycle system is composed of 6 stages, each encompassing an important part of what the continued development of a digital system should look like.</p>
+            <h3>Defining the Systems Life Cycle </h3>
+            <p>A system life cycle can simply be defined, as the name suggests, the development of a system’s life cycle. We watch as a digital system evolves over time, models are typically used to demonstrate a behavioral representation of a given entity. As mentioned above, the life cycle system is composed of 6 stages: conception, development, production, utilization, support, and retirement.</p>
+            <p>Conception is made up of the identifiers and needs of a system. It begins with the initial idea which is then expanded upon or explored. The phase involves defining a system’s purpose and any other objectives it may have. Stakeholders come together to get an understanding of the system and outline outcomes that may be wanted.</p>
+            <p>The development stage in the systems life cycle focuses on exploring potential solutions for any needs and selecting the best solution to continue forward. According to our text, Systems Engineering Demystified, states “This Stage may also involve developing a prototype prior to the Production Stage.” Doing so only continues to provide a clearer view of what the system will look like.</p>
+            <p>The production stage our solution from before and creates the actual system. There is testing involved with this stage as to ensure the system functions correctly. “the System is built right (verification) and that the right System is built (validation).” This stage involves creating the final system based on the prototype developed earlier (during the development stage).</p>
+            <p>The utilization stage describes the use of the system, in other words, we are monitoring how the system operate in its environment, analyzing whether or not the system is providing the expected outcomes and value to its users and stakeholders. The goal is to ensure reliability within the system and to address any issues concerning its operation when they do arise.</p>
+            <p>The support stage focuses primarily on providing support services to the system, maintenance and reporting errors are just one part of this as the goal is to also extend the usability of a system over time.</p>
+            <p>Retirement, the final stage of the life cycle system marks the end of a system’s use, when the time comes to be decommissioned. The goal is to responsibly phase out the system while minimizing risks and costs associated with its discontinuation.</p>
+            <h3>Conclusion</h3>
+            <p>Managing a system’s life cycle is essential to systems engineering. Developers use a wide array of models to effectively map out the trajectory of a system’s life cycle. We see how strategic planning and development shape project outcomes. In the end a system's life cycle isn't just designed from a technical approach, it's a way of thinking that's necessary to create systems that continue to progress, and strive. As new systems are created, the life cycle of systems will continue to set the primary example of how any system should develop and progress.</p>
+                <h3>References:</h3>
+                <ol>
+                    <li>Metu. System Life Cycle Concepts, Models, and Processes. (2023). https://users.metu.edu.tr/degerli/IS722/IS722-2- SystemLifeCycleConceptsModelsandProcesses.pdf</a></li>
+                    <li>Holt, J. (2021). Systems engineering demystified. Packt Publishing.</a></li>
+                    </ol>
+            </footer>
+         </article>
          <!-- Module 2.1 Blog Post Starts here -->
 
          <!-- Module 2.2 Blog Post Starts here -->
