--- a/index.html
+++ b/index.html
@@ -27,9 +27,13 @@
         </div>
 <!-- Main Content Area -->
         <main>
-          <section>
-            <h2>sriracha vexillologist</h2>
-            <p>Meh cred pug kitsch direct trade 90's sriracha keffiyeh 8-bit yr iPhone meditation taiyaki PBR&amp;B kogi. Tattooed keffiyeh schlitz, distillery chia bitters quinoa +1 raw denim green juice tilde unicorn drinking vinegar keytar. Thundercats tumeric iPhone, letterpress raw denim fashion axe mixtape cray viral normcore celiac dreamcatcher squid. IPhone next level sriracha man braid taiyaki vegan. Post-ironic brooklyn next level actually coloring book wolf vape lo-fi fanny pack. 8-bit semiotics chicharrones readymade pabst sriracha kale chips Thundercats.</p>                       
+          <section id="introduction">
+            <h2>What we have here</h2>
+            <p>is an artifact of exploration. A journey to understanding the digital environment through designing the systems that define it. It's a playground that, at any given time, showcases the work of students in the learning space, wherever that may be. Some projects are incomplete, others may be polished. Others may be riddled with errors, and that's okay. Here, we embrace failure. We celebrate it. Why? Because when we fail, we fail forward. We find what doesn't work and make it better. What more can we ask of each other?</p>                       
+          </section>
+          <section id="portfolios">
+            <h2>What we have here</h2>
+            <p>is an artifact of exploration. A journey to understanding the digital environment through designing the systems that define it. It's a playground that, at any given time, showcases the work of students in the learning space, wherever that may be. Some projects are incomplete, others may be polished. Others may be riddled with errors, and that's okay. Here, we embrace failure. We celebrate it. Why? Because when we fail, we fail forward. We find what doesn't work and make it better. What more can we ask of each other?</p>                       
           </section>
         </main>
         <footer>
