--- a/portfolios/index.html
+++ b/portfolios/index.html
@@ -91,7 +91,19 @@
                                 </div>
                             </div>
                         </a>
-                    </li>                    
+                    </li>   
+                    <li>
+                        <a href="../cruze">
+                            <div class="card">
+                                <div class="card-front">
+                                    <p>cruze</p>
+                                </div>
+                                <div class="card-back">
+                                    <p>cruze</p>
+                                </div>
+                            </div>
+                        </a>
+                    </li>                   
                     <li>
                         <a href="../durhamj">
                             <div class="card">
