--- a/furuci/index.html
+++ b/furuci/index.html
@@ -158,6 +158,37 @@
 
 
          <!-- Module 2.1 Blog Post Starts here -->
+   
+ <article>
+            <header class="article-header">
+               <h2>Module 1.1 Blog Post</h2>
+            </header>
+            <h3>What is System Engineering</h3>    <header class="article-header"> 
+            <h3>What is System Engineering</h3>    <header class="article-header"> 
+            <h3>What is System Engineering</h3>    <header class="article-header">
+            <footer class="article-footer"> 
+
+                <h3>Sources:</h3> 
+
+                <ol> 
+
+                  
+                    <li> GeeksforGeeks. (2020, February 26).<em> Software Development Life Cycle (SDLC).</em> GeeksforGeeks <a href="https://www.geeksforgeeks.org/software-development-life-cycle-sdlc/">Article Link.</a></li> 
+
+                    <li> Ghosh, A. (2023, November 17). <em>  Advantages and Disadvantages of SDLC(Software Development Life Cycle) - ellow.io.</em> Ellow. <a href= "https://ellow.io/advantages-and-disadvantages-of-sdlc/  "> Another Article Link </a></li> 
+
+                    <li> Holt, J., & Weilkiens, T. (2023). <em> Systems Engineering Demystified. Packt Publishing Ltd.</em></li> 
+
+               </ol> 
+
+  
+
+‌ 
+
+            </footer> 
+
+         </article>  
+
 
          <!-- Module 2.2 Blog Post Starts here -->
 
