added apa sources

--- a/furuci/index.html
+++ b/furuci/index.html
@@ -173,11 +173,15 @@
                 <ol> 
 
                   
-                    <li> GeeksforGeeks. (2020, February 26).<em> Software Development Life Cycle (SDLC).</em> GeeksforGeeks <a href="https://www.geeksforgeeks.org/software-development-life-cycle-sdlc/">Article Link.</a></li> 
+                    <li>Göttgens, I., & Oertelt-Prigione, S. (2021).<em> The Application of Human-Centered Design Approaches in Health Research and Innovation: A Narrative Review of Current Practices. </em> JMIR mHealth and uHealth, 9(12), e28102. <a href="https://doi.org/10.2196/28102/"> Outside Source Number One </a></li> 
 
-                    <li> Ghosh, A. (2023, November 17). <em>  Advantages and Disadvantages of SDLC(Software Development Life Cycle) - ellow.io.</em> Ellow. <a href= "https://ellow.io/advantages-and-disadvantages-of-sdlc/  "> Another Article Link </a></li> 
+                    <li> Johnson, J. (2020). <em> Designing with the Mind in Mind (3rd ed.).</em>Elsevier S & T. <a href="https://cwu.vitalsource.com/books/9780128182031"/> Assigned Reading Number One </a></li> 
 
-                    <li> Holt, J., & Weilkiens, T. (2023). <em> Systems Engineering Demystified. Packt Publishing Ltd.</em></li> 
+
+                    <li> <em> The Impact of Visual Hierarchy in User Interface Design: A Cognitive Perspective. </em>(2023, June 19). Association of Human-Computer Interaction. <a href="https://www.hci.org.uk/article/the-impact-of-visual-hierarchy-in-user-interface-design-a-cognitive-perspective/"/> Outside Source Number Two </a><li> 
+
+                   <li>Yablonski, J. (2024).<em>Laws of UX (2nd ed.).</em> O'Reilly Media, Inc.. <a href="https://cwu.vitalsource.com/books/9781098146924"/> Assigned Reading Number Two </a></li>
+
 
                </ol> 
 
