--- a/furuci/index.html
+++ b/furuci/index.html
@@ -170,12 +170,11 @@
 
                 <h3>Sources:</h3> 
 
-                <ol> 
-
-                  
-                    <li>Göttgens, I., & Oertelt-Prigione, S. (2021).<em> The Application of Human-Centered Design Approaches in Health Research and Innovation: A Narrative Review of Current Practices. </em> JMIR mHealth and uHealth, 9(12), e28102. <a href="https://doi.org/10.2196/28102/"> Outside Source Number One </a></li> 
+                <ol>
 
                     <li> Johnson, J. (2020). <em> Designing with the Mind in Mind (3rd ed.).</em>Elsevier S & T. <a href="https://cwu.vitalsource.com/books/9780128182031"/> Assigned Reading Number One </a></li> 
+
+                    <li>Landry, L. (2020, December 15). <em>What is human-centered design?</em> Business Insights Blog; Harvard Business School Online. <a href="https://online.hbs.edu/blog/post/what-is-human-centered-design"/> Outside Source Number One</a></li>
 
 
                     <li> <em> The Impact of Visual Hierarchy in User Interface Design: A Cognitive Perspective. </em>(2023, June 19). Association of Human-Computer Interaction. <a href="https://www.hci.org.uk/article/the-impact-of-visual-hierarchy-in-user-interface-design-a-cognitive-perspective/"/> Outside Source Number Two </a><li> 
