--- a/pedersene/index.html
+++ b/pedersene/index.html
@@ -78,7 +78,15 @@ systems-engineering-demystified-ch-1-2.pdf: Designing Digital Environments  >
 
          <!-- Module 2.1 Blog Post Starts here -->
 
-         <!-- Module 2.2 Blog Post Starts here -->
+         <!-- Module 2.2 Blog Post Starts here --> Memory and Mental models influence user interaction by the memorys role in user interaction. The users rely on short-term and long-term memory when interacting with interfaces. Short term memory holds limited information for brief periods. Long term memory stores learned patterns like knowing that a trash can icon means “delete”. Weh nan interface requires users to remember too much, such as steps from previous screens or unclear symbols, cognitive load increase and performance suffers. Secondly mental models are a user's internal understanding pf how a system works, often based on past experiences with similar products or real-world objects. If an app mirrors a user's mental model the system feels intuitive.  
+
+Interface consistency and systems feedback improve usability. Interface consistency is in design elements, navigation structure, and terminology and layout. It helps users predict what will happen next, transfer knowledge from one part of the system to another and reduce learning time and error rates. The feedback shows systems have received and processed a user's action like, success: Your order has been placed. This is important because it builds trust, helps users feel control, and aids in error recovery.  
+
+Cognitive demands refer to the mental effort a user must exert to understand and interact with a system or interface. High cognitive demands can result in user frustration and longer task completion times. Some common sources of cognitive load cluttered interfaces and poor labeling or ambiguous icons. Some stragies to reduce cognitive load is simplifying the interface by using clear, concise language and group related elements together. Progressive disclosure shows only essential information upfront revealing more as needed. Familiar patterns use industry-standard symbols, terms, and layouts. Task-oriented design guided users through actions with visual cues and step-by-step flows.  
+
+Some interface roles of consistency reduce the need for users to relearn interface elements on different screens or devices. The benefit of consistency builds user confidence and reduces learning time. The role of feedback in user experience refers to the system's response to user actions, it reassures users that their input was received and understood. The types of feedback are visual, auditory, haptic, system. These are important because they help users recover from mistakes and reinforce correct behavior.  
+
+Tesler's law is also known as The Law of Conservation of Complexity. You can eliminate complexity entirely from a system or task, you can choose who handles it, the design or developer or user. Complexity is necessary to accomplish a task. The designer's job is to minimize how much complexity the user must deal with. And a great design takes time, it hides the complexity through automation, defaults, smart algorithms, and clear workflows. 
 
          <!-- Module 2.3 Blog Post Starts here -->
 
@@ -88,7 +96,11 @@ systems-engineering-demystified-ch-1-2.pdf: Designing Digital Environments  >
 
       </main>
 <!-- Page Footer  -->
-      <footer class="page-footer">
+      <footer class="page-footer"> 
+
+Yablonski, J. (2024). Laws of UX (2nd ed.). O'Reilly Media, Inc.. https://bookshelf.vitalsource.com/books/9781098146924  
+
+Johnson, J. (2020). Designing with the Mind in Mind (3rd ed.). Elsevier S & T. https://bookshelf.vitalsource.com/books/9780128182031  
        <p>Copyright &copy; 2025</p>
       </footer>
    </body>
